--- a/wil-v1.yaml
+++ b/wil-v1.yaml
@@ -1,39 +1,34 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: dev
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: playground-service
-  namespace: dev
-spec:
-  selector:
-    app: playground
-  ports:
-  - protocol: TCP
-    port: 8888
-    targetPort: 8888
-  type: ClusterIP
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wil
+  name: wil-playground
   namespace: dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: playground
+      app: wil-playground
   template:
     metadata:
       labels:
-        app: playground
+        app: wil-playground
     spec:
       containers:
-      - name: playground
-        image: wil42/playground:v1
-        ports:
-        - containerPort: 8888
+        - name: wil-playground
+          image: wil42/playground:v1
+          ports:
+            - containerPort: 8888
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: wil-playground
+  namespace: dev
+spec:
+  selector:
+    app: wil-playground
+  ports:
+    - protocol: TCP
+      port: 8888
+      targetPort: 8888
+  type: LoadBalancer  
